--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-reanimated": "~1.4.0",
+    "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
-    "react-native-web-hooks": "^2.0.2"
+    "react-native-web-hooks": "^2.0.2",
+    "react-navigation": "^4.0.10",
+    "react-navigation-drawer": "^2.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
